added proceed button removed font url from scss

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,8 @@
 // TODO: remove URL and import font from local
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+// @import url('https://fonts.googleapis.com/css?family=Roboto');
 page-home {
     ion-content {
-        background: #34495e url("../../assets/images/background.jpg") no-repeat fixed center;
+        background: #34495e url("../assets/images/background.jpg") no-repeat fixed center;
     }
     .imeiContainer {
         width: 80vw;
